adds two other grid displays

--- a/html/data.html
+++ b/html/data.html
@@ -58,14 +58,26 @@
             </aside>            
        </form>
        <div id="palette">
-            <!-- <div class="buttonNav">
-                <button class="button" id="btn3">3-Element Palette</button>
-                <button class="button" id="btn5">5-Element Palette</button>
-                <button class="button" id="btn10">10-Element Palette</button>
-            </div> -->
-            <div id="grid">  
+            <div class="buttonNav">
                 
+                <button class="button" id="showRgb">Show RGB Values</button>
+                <button class="button" id="hideRgb">Hide RGB Values</button>
+
+                <button class="button" id="show2"></button>
+                <button class="button" id="show3"></button>
+
             </div>
+            <div id="gridSection">
+                <div id="grid"></div>
+                <div id="grid2"></div>
+                <div id="grid3"></div>
+            </div>
+            <div id="rgbSection">
+                <div id="rgbValues"></div>
+                <div id="rgbValues2"></div>
+                <div id="rgbValues3"></div>
+            </div>
+            <a id="tryAgain" href='data.html'>Try Again</a>
         </div>
     </main>
 
