adds button function for grids 2 & 3

--- a/html/data.html
+++ b/html/data.html
@@ -64,7 +64,9 @@
                 <button class="button" id="hideRgb">Hide RGB Values</button>
 
                 <button class="button" id="show2"></button>
+                <button class="button" id="hide2"></button>
                 <button class="button" id="show3"></button>
+                <button class="button" id="hide3"></button>
 
             </div>
             <div id="gridSection">
