changes layout to grid

--- a/html/intro.html
+++ b/html/intro.html
@@ -6,6 +6,7 @@
     <title>Palette Generator</title>
     <link rel="stylesheet" href="../css/normalize.css">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/layout.css">
 </head>
 <body class="page">
     <header class="banner">
@@ -13,19 +14,19 @@
             <h1>Palette Generator</h1>
             <h2 id="subheading">Intro</h2>
         </div>
-        <nav>
+        <nav class='nav'>
             <ul class='navBar'>
-                <span class="menu">Menu</span>
+                <span class="menu">menu</span>
                 <div class="navList">
-                    <li><a href="intro.html">Home</a></li>
-                    <li><a href="data.html">Data</a></li>
+                    <li><a href="intro.html">home</a></li>
+                    <li><a href="data.html">data</a></li>
                 </div>
             </ul>
         </nav>
     </header>
 
     <main class="pageContent">
-        <div class="text">
+        <!-- <div class="text"> -->
             <section class="dots">
                 <h2>Dots</h2>
                 <div class="column">
@@ -47,7 +48,7 @@
                     <p>Circularity, cyclicity, interdependence, relational, irreducible, complex concepts of disregard for the observer for whom the reductive, determinative exercise, of this-or-not is the ultimate display of what willed power constitutes. The zero-to-one, the one-to-zero, as a majestic deity-assignation deserving one-step process of creation or destruction.</p>
                 </div>
             </section>
-        </div>
+        <!-- </div> -->
 
         <aside class="transitionIntro">
             <h2>It is time to get started building your own palette!</h2>
