--- a/html/data.html
+++ b/html/data.html
@@ -6,6 +6,7 @@
     <title>Palette Generator</title>
     <link rel="stylesheet" href="../css/normalize.css">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/layout.css">
 </head>
 <body class="page">
     <header class="banner">
@@ -15,10 +16,10 @@
         </div>
         <nav>
             <ul class='navBar'>
-                <span class="menu">Menu</span>
+                <span class="menu">menu</span>
                 <div class="navList">
-                    <li><a href="intro.html">Home</a></li>
-                    <li><a href="data.html">Data</a></li>
+                    <li><a href="intro.html">home</a></li>
+                    <li><a href="data.html">data</a></li>
                 </div>
             </ul>
         </nav>
@@ -82,10 +83,12 @@
             <a id="tryAgain" href='data.html'>Try Again</a>
         </div>
     </main>
-
+    
     <footer class="footer">
-        <span>For info, contact: <a href=“mailto:thisEmail@gmail.com”>thisEmail@gmail.com</a></span>
+        <span>Aesthetic advise recommended for the palette generated</span><br>
+        <span>No rights preserved</span>
     </footer>    
+    
     <script src='../script.js'></script>
 </body>
 
