sets preliminary layout on palette

--- a/html/data.html
+++ b/html/data.html
@@ -62,14 +62,19 @@
 
        <div id="palette">
             <div class="buttonNav">
-                
-                <button class="button" id="showRgb">Show RGB Values</button>
-                <button class="button" id="hideRgb">Hide RGB Values</button>
+                <div class="show2">
+                    <button class="button" id="show2"></button>
+                    <button class="button" id="hide2"></button>
+                </div>
+                <div class="show3">
+                    <button class="button" id="show3"></button>
+                    <button class="button" id="hide3"></button>
+                </div>
+                <div class="showRgb">
+                    <button class="button" id="showRgb">Show all RGB Values</button>
+                    <button class="button" id="hideRgb">Hide all RGB Values</button>
+                </div>
 
-                <button class="button" id="show2"></button>
-                <button class="button" id="hide2"></button>
-                <button class="button" id="show3"></button>
-                <button class="button" id="hide3"></button>
                 <a id="tryAgain" href='data.html'>Try Again</a>
 
             </div>
@@ -79,9 +84,9 @@
                 <div id="grid3"></div>
             </div>
             <div id="rgbSection">
-                <div id="rgbValues"></div>
-                <div id="rgbValues2"></div>
-                <div id="rgbValues3"></div>
+                <div class="rgbValues" id="rgbValues"></div>
+                <div class="rgbValues" id="rgbValues2"></div>
+                <div class="rgbValues" id="rgbValues3"></div>
             </div>
             
         </div>
