improves buttonNav elements

--- a/html/data.html
+++ b/html/data.html
@@ -61,18 +61,18 @@
        </form>
 
        <div id="palette">
-            <div class="buttonNav">
+            <div id="buttonNav">
                 <div class="show2">
-                    <button class="button" id="show2"></button>
-                    <button class="button" id="hide2"></button>
+                    <button class="button show" id="show2"></button>
+                    <button class="button hide" id="hide2"></button>
                 </div>
                 <div class="show3">
-                    <button class="button" id="show3"></button>
-                    <button class="button" id="hide3"></button>
+                    <button class="button show" id="show3"></button>
+                    <button class="button hide" id="hide3"></button>
                 </div>
                 <div class="showRgb">
-                    <button class="button" id="showRgb">Show all RGB Values</button>
-                    <button class="button" id="hideRgb">Hide all RGB Values</button>
+                    <button class="button show" id="showRgb">Show all RGB Values</button>
+                    <button class="button hide" id="hideRgb">Hide all RGB Values</button>
                 </div>
 
                 <a id="tryAgain" href='data.html'>Try Again</a>
