fixes rgbSection display

--- a/html/data.html
+++ b/html/data.html
@@ -84,9 +84,9 @@
                 <div id="grid3"></div>
             </div>
             <div id="rgbSection">
-                <div class="rgbValues" id="rgbValues"></div>
-                <div class="rgbValues" id="rgbValues2"></div>
-                <div class="rgbValues" id="rgbValues3"></div>
+                <div class="rgbValues" id="rgbValues"><span class="rgbTitle">Chosen:</span><br></div>
+                <div class="rgbValues" id="rgbValues2"><span class="rgbTitle">Other#1:</span><br></div>
+                <div class="rgbValues" id="rgbValues3"><span class="rgbTitle">Other#2:</span><br></div>
             </div>
             
         </div>
