fixes button issues

--- a/html/data.html
+++ b/html/data.html
@@ -25,7 +25,6 @@
         </nav>
     </header>
 
-    <!-- <main class="pageContent"> -->
     <main class="pageContentData">
         <form action="#" method="post" id="inputInfo">
     
@@ -60,7 +59,9 @@
             </aside>            
        </form>
 
+       <!-- Results to be Displayed Here-->
        <div id="palette">
+           <!-- Interactive Button Nav for User -->
             <div id="buttonNav">
                 <div class="show2">
                     <button class="button show" id="show2"></button>
@@ -76,13 +77,16 @@
                 </div>
 
                 <a id="tryAgain" href='data.html'>Try Again</a>
-
             </div>
+
+            <!-- Grids Display Here -->
             <div id="gridSection">
                 <div id="grid"></div>
                 <div id="grid2"></div>
                 <div id="grid3"></div>
             </div>
+
+            <!-- rgbValues Display Here -->
             <div id="rgbSection">
                 <div class="rgbValues" id="rgbValues"><span class="rgbTitle">Chosen:</span><br></div>
                 <div class="rgbValues" id="rgbValues2"><span class="rgbTitle">Other#1:</span><br></div>
