--- a/html/intro.html
+++ b/html/intro.html
@@ -14,6 +14,7 @@
             <h1>Palette Generator</h1>
             <h2 id="subheading">Intro</h2>
         </div>
+        <!-- Navigation Bar -->
         <nav class='nav'>
             <ul class='navBar'>
                 <span class="menu">menu</span>
@@ -24,7 +25,8 @@
             </ul>
         </nav>
     </header>
-
+    
+    <!-- Page Content -->
     <main class="pageContent">
         <section class="dots">
             <h2>Dots</h2>
@@ -50,6 +52,7 @@
         
         <aside class="transitionIntro">
             <h2>It is time to get started building your own palette!</h2>
+            <!-- Upon user clicking this, is taken to input form -->
             <a href="data.html">Let's go!</a>
         </aside>
     </main>
